--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Griffy:ital@0;1&family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
     <meta name="description" content="Transform your boring study materials into engaging Halloween-themed stories and quizzes!" />
+    
+    <!-- Single Page Apps for GitHub Pages -->
+    <script type="text/javascript">
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
   </head>
   <body>
     <!-- Skip navigation link for accessibility -->
