fix: resolve 404 errors on page refresh with proper GitHub Pages SPA redirect

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,16 @@
     
     <!-- Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
+      // Restore the URL from 404 redirect
+      (function(){
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect != location.href) {
+          history.replaceState(null, null, redirect);
+        }
+      })();
+      
+      // Handle query string redirect
       (function(l) {
         if (l.search[1] === '/' ) {
           var decoded = l.search.slice(1).split('&').map(function(s) { 
